--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,38 @@ main {
 }
 
 .view .item p {
-    position: fixed;
-    top: auto;
-    bottom: 0;
-    height: 50px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: -1px;
+    bottom: 4px;
+    color: white;
+    background: #3338;
+    backdrop-filter: blur(11px);
+    padding: 10px;
+    border-radius: 0px 0 10px 10px;
+}
+
+.devices {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.device-pic {
+    width: 30%;
+    padding-bottom: 95px;
+}
+
+.device-pic img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
 footer {
+    height: 3rem;
     width: 100%;
     display: flex;
     justify-content: center;
