--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,51 @@ main {
     border-radius: 8px;
 }
 
+.device-pic p {
+    display: none;
+}
+
+.lightbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(10px);
+}
+
+.lightbox .area {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70vw;
+    height: 70vh;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.lightbox .area p {
+    position: absolute;
+    color: white;
+    backdrop-filter: blur(10px);
+    background: #3338;
+    width: 35vw;
+    bottom: 10vh;
+    padding: 10px;
+    overflow-wrap: break-word;
+}
+
+.lightbox .area img {
+    height: 100%;
+    width: auto;
+    border-radius: 10px;
+}
+
 footer {
     height: 3rem;
     width: 100%;
